--- a/Views/Ordini/Index.cshtml
+++ b/Views/Ordini/Index.cshtml
@@ -1,113 +1,145 @@
 @model IEnumerable<ListaOrdiniViewModel>
 @{
-    ViewData["Title"] = "Ordini";
+  ViewData["Title"] = "Ordini";
 }
 
- <style>
-    
+<style>
+  .order-card {
+    border-radius: 15px;
+    padding: 15px;
+    margin-bottom: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+
+  .order-photo {
+    width: 150px;
+    height: 150px;
+    border-radius: 10px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .order-photo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .btn-detail,
+  .btn-delete {
+    width: 100%;
+    margin-top: 5px;
+  }
+
+  .order-date {
+    font-weight: bold;
+  }
+
+  @@media screen and (max-width: 576px) {
     .order-card {
-      border-radius: 15px;
-      padding: 15px;
-      margin-bottom: 15px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      text-align: center;
     }
+
     .order-photo {
-      width: 150px;
-      height: 150px;
-      border-radius: 10px;
-      overflow: hidden;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      margin: 0 auto 10px;
     }
-    .order-photo img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
+
+    .btn-detail,
+    .btn-delete {
+      display: inline-block;
+      width: auto;
+      margin: 5px 10px;
     }
-    .btn-detail, .btn-delete {
-      width: 100%;
-      margin-top: 5px;
-    }
-    .order-date {
-      font-weight: bold;
-    }
-    @@media screen and (max-width: 576px) {
-      .order-card {
-        text-align: center;
-      }
-      .order-photo {
-        margin: 0 auto 10px;
-      }
-      .btn-detail, .btn-delete {
-        display: inline-block;
-        width: auto;
-        margin: 5px 10px;
-      }
-    }
+  }
+
   /* Stile per schermi medi (576px a 1180px) */
-    @@media screen and (max-width: 1180px) and (min-width: 576px) {
-        .order-card {
-            text-align: center; 
-            display: block; /* Forza layout verticale */
-        }
-
-        .order-photo {
-            margin: 0 auto 15px; 
-        }
-
-        .col-12.col-sm-8 {
-            text-align: center; 
-        }
-
-        .btn-detail, .btn-delete {
-            display: block; /* Disposizione verticale dei bottoni */
-            
-            margin: 5px auto; /* Centra i bottoni */
-        }
+  @@media screen and (max-width: 1180px) and (min-width: 576px) {
+    .order-card {
+      text-align: center;
+      display: block;
+      /* Forza layout verticale */
     }
-  </style>
-   
+
+    .order-photo {
+      margin: 0 auto 15px;
+    }
+
+    .col-12.col-sm-8 {
+      text-align: center;
+    }
+
+    .btn-detail,
+    .btn-delete {
+      display: block;
+      /* Disposizione verticale dei bottoni */
+
+      margin: 5px auto;
+      /* Centra i bottoni */
+    }
+  }
+</style>
+
 
 <div class="container mt-4">
-@*    <div class="d-flex justify-content-start mb-3">
+  @*    <div class="d-flex justify-content-start mb-3">
          <a asp-action="OrdinaPerData" class="btn btn-dark">Ordina per data</a>
     </div> *@
 
-     @foreach (var ordine in Model)
-    {
-        <h5 class="order-date">Ordine effettuato il @ordine.DataAcquisto.ToString("dd/MM/yyyy")</h5>
-        <div class="card order-card">
-            <div class="row align-items-center">
-                <div class="col-12 col-sm-2 text-center">
-                    <div class="order-photo">
-                      @*  <img src="~/img/@ordine.UrlImmagineProdotto" alt="Product Image">*@
-                      <img src="@ordine.UrlImmagineProdotto" alt="Product Image">
-                    </div>
-                </div>
-                <div class="col-12 col-sm-8">
-                    <h6>Numero d'ordine: @ordine.NomeOrdine</h6>
-          
-                    <p>Prezzo: €@ordine.TotaleOrdine<br>Stato ordine: @ordine.StatoOrdine<br>Data ordine: @ordine.DataAcquisto.ToString("dd/MM/yyyy")</p>
-                </div>
-
-                <div class="col-12 col-sm-2 d-flex flex-sm-column justify-content-center">
-                  
-                    <a asp-action="DettaglioOrdine" asp-route-id="@ordine.Id" class="btn btn-dark btn-detail">Dettaglio</a>
-                   
-
-
-                        <!-- Form per eliminare l'ordine -->
-    <form asp-action="EliminaOrdine" method="post" style="display:inline;">
-        <input type="hidden" name="id" value="@ordine.Id" />
-        <button type="submit" class="btn btn-danger btn-delete">Elimina</button>
-    </form>
-                </div>
+  @foreach (var ordine in Model)
+  {
+    <h5 class="order-date">Ordine effettuato il @ordine.DataAcquisto.ToString("dd/MM/yyyy")</h5>
+    <div class="card order-card">
+      <div class="row align-items-center">
+        <div class="col-12 col-sm-2 text-center">
+          <div class="order-photo">
+            <div id="mainCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                @foreach (var item in ordine.Orologi)
+                {
+                  <div class="carousel-item active">
+                    <img class="d-block w-100 main-carousel-image" src="item.UrlImmagine">
+                  </div>
+                }
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#mainCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#mainCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
             </div>
+          </div>
         </div>
-    } 
+        <div class="col-12 col-sm-8">
+          <h6>Numero d'ordine: @ordine.NomeOrdine</h6>
+
+          <p>Prezzo: €@ordine.TotaleOrdine<br>Stato ordine: @ordine.StatoOrdine<br>Data ordine:
+            @ordine.DataAcquisto.ToString("dd/MM/yyyy")</p>
+        </div>
+
+        <div class="col-12 col-sm-2 d-flex flex-sm-column justify-content-center">
+
+          <a asp-action="DettaglioOrdine" asp-route-id="@ordine.Id" class="btn btn-dark btn-detail">Dettaglio</a>
+
+
+
+          <!-- Form per eliminare l'ordine -->
+          <form asp-action="EliminaOrdine" method="post" style="display:inline;">
+            <input type="hidden" name="id" value="@ordine.Id" />
+            <button type="submit" class="btn btn-danger btn-delete">Elimina</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  }
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
