--- a/Views/Prodotti/AggiungiProdotto.cshtml
+++ b/Views/Prodotti/AggiungiProdotto.cshtml
@@ -8,45 +8,51 @@
         <div class="col-lg-9 mx-auto rounded border p-4">
             <h1 class="text-center mb-5">@ViewData["Title"]</h1>
 
-            <form asp-action="AggiungiProdotto" method="post" class="g-3">
+            <form asp-action="AggiungiProdotto" method="post" class="g-3" enctype="multipart/form-data">
 
                 <div class="form-group row mb-3">
                     <label asp-for="Orologio.Nome" class="col-sm-4 control-label">Nome</label>
                     <div class="col-sm-8">
-                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Nome" placeholder="nome">
-                        <!--<span asp-validation-for="Orologio.Nome" class="text-danger"></span>-->
+                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Nome"
+                            placeholder="nome">
+                        <span asp-validation-for="Orologio.Nome" class="text-danger"></span>
                     </div>
                 </div>
 
                 <div class="form-group row mb-3">
                     <label class="col-sm-4 control-label">Prezzo</label>
                     <div class="col-sm-8">
-                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Prezzo" placeholder="prezzo">
-                        <!--<span asp-validation-for="Orologio.Prezzo" class="text-danger"></span>-->
+                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Prezzo"
+                            placeholder="prezzo">
+                        <span asp-validation-for="Orologio.Prezzo" class="text-danger"></span>
                     </div>
                 </div>
 
                 <div class="form-group row mb-3">
                     <label class="col-sm-4 control-label">Giacenza</label>
                     <div class="col-sm-8">
-                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Giacenza" placeholder="giacenza">
-                        <!--<span asp-validation-for="Orologio.Giacenza" class="text-danger"></span>-->
+                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Giacenza"
+                            placeholder="giacenza">
+                        <span asp-validation-for="Orologio.Giacenza" class="text-danger"></span>
                     </div>
                 </div>
 
                 <div class="form-group row mb-3">
                     <label class="col-sm-4 control-label">Colore</label>
                     <div class="col-sm-8">
-                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Colore" placeholder="colore">
-                        <!--<span asp-validation-for="Orologio.Colore" class="text-danger"></span>-->
+                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Colore"
+                            placeholder="colore">
+                        <span asp-validation-for="Orologio.Colore" class="text-danger"></span>
                     </div>
                 </div>
 
+                @* sezione img *@
                 <div class="form-group row mb-3">
                     <label class="col-sm-4 control-label">Immagine</label>
                     <div class="col-sm-8">
-                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.UrlImmagine" placeholder="immagine">
-                        <!--<span asp-validation-for="Orologio.UrlImmagine" class="text-danger"></span>-->
+                        <input type="file" class="form-control bg-dark text-light border-secondary d-none" id="ImageFile" name="ImageFile"
+                            asp-for="Orologio.UrlImmagine">
+                        <button type="button" class="btn btn-custom w-100 rounded-pill" onclick="document.getElementById('ImageFile').click();">Seleziona Immagine</button>
                     </div>
                 </div>
 
@@ -60,7 +66,7 @@
                                 <option value="@categoria.Id">@categoria.Nome</option>
                             }
                         </select>
-                        <!--<span asp-validation-for="Orologio.CategoriaId" class="text-danger"></span>-->
+                        <span asp-validation-for="Orologio.CategoriaId" class="text-danger"></span>
                     </div>
                 </div>
 
@@ -74,23 +80,25 @@
                                 <option value="@marca.Id">@marca.Nome</option>
                             }
                         </select>
-                        <!--<span asp-validation-for="Orologio.MarcaId" class="text-danger"></span>-->
+                        <span asp-validation-for="Orologio.MarcaId" class="text-danger"></span>
                     </div>
                 </div>
 
                 <div class="form-group row mb-3">
                     <label class="col-sm-4 control-label">Modello</label>
                     <div class="col-sm-8">
-                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Modello" placeholder="modello">
-                        <!--<span asp-validation-for="Orologio.Modello" class="text-danger"></span>-->
+                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Modello"
+                            placeholder="modello">
+                        <span asp-validation-for="Orologio.Modello" class="text-danger"></span>
                     </div>
                 </div>
 
                 <div class="form-group row mb-3">
                     <label class="col-sm-4 control-label">Referenza</label>
                     <div class="col-sm-8">
-                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Referenza" placeholder="referenza">
-                        <!--<span asp-validation-for="Orologio.Referenza" class="text-danger"></span>-->
+                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Referenza"
+                            placeholder="referenza">
+                        <span asp-validation-for="Orologio.Referenza" class="text-danger"></span>
                     </div>
                 </div>
 
@@ -104,7 +112,7 @@
                                 <option value="@materiale.Id">@materiale.Nome</option>
                             }
                         </select>
-                        <!--<span asp-validation-for="Orologio.MaterialeId" class="text-danger"></span>-->
+                        <span asp-validation-for="Orologio.MaterialeId" class="text-danger"></span>
                     </div>
                 </div>
 
@@ -118,15 +126,16 @@
                                 <option value="@tipologia.Id">@tipologia.Nome</option>
                             }
                         </select>
-                        <!--<span asp-validation-for="Orologio.TipologiaId" class="text-danger"></span>-->
+                        <span asp-validation-for="Orologio.TipologiaId" class="text-danger"></span>
                     </div>
                 </div>
 
                 <div class="form-group row mb-3">
                     <label class="col-sm-4 control-label">Diametro</label>
                     <div class="col-sm-8">
-                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Diametro" placeholder="diametro">
-                        <!--<span asp-validation-for="Orologio.Diametro" class="text-danger"></span>-->
+                        <input class="form-control bg-dark text-light border-secondary" asp-for="Orologio.Diametro"
+                            placeholder="diametro">
+                        <span asp-validation-for="Orologio.Diametro" class="text-danger"></span>
                     </div>
                 </div>
 
@@ -140,13 +149,12 @@
                                 <option value="@genere.Id">@genere.Nome</option>
                             }
                         </select>
-                        <!--<span asp-validation-for="Orologio.GenereId" class="text-danger"></span>-->
+                        <span asp-validation-for="Orologio.GenereId" class="text-danger"></span>
                     </div>
                 </div>
 
                 <div class="row mt-4">
                     <div class="offset-sm-4 col-sm-8">
-                        
                         <button type="submit" class="btn btn-custom w-100 rounded-pill">Submit</button>
                     </div>
                 </div>
@@ -162,9 +170,11 @@
         background-color: #121212;
         color: #e0e0e0;
     }
+
     .container.bg-dark {
         background-color: #1e1e1e;
     }
+
     /* Input Field Styles */
     .form-control,
     .form-select {
@@ -172,12 +182,14 @@
         color: #f5f5dc;
         border: 1px solid #555;
     }
+
     .form-control:focus,
     .form-select:focus {
         background-color: #444;
         color: #f5f5dc;
         border-color: #888;
     }
+
     /* Custom Button Style with Pale Cream Color */
     .btn-custom {
         background-color: #f5f5dc;
@@ -185,6 +197,7 @@
         border: none;
         transition: background-color 0.3s ease, color 0.3s ease, border 0.3s ease;
     }
+
     /* Hover Effect */
     .btn-custom:hover {
         background-color: transparent;
